# raytracing

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile
.github/workflows/: build.yaml
src/: CMakeLists.txt  main.cpp  main.rs  vec3.cpp
src/lib/: CMakeLists.txt  colour.h  ray.h  vec3.cpp  vec3.h
tests/: CMakeLists.txt  ray_test.cpp  vec3_test.cpp
